validação para caso houver erro na consulta ao BD

--- a/app/views/products/products-list/list.ejs
+++ b/app/views/products/products-list/list.ejs
@@ -9,7 +9,7 @@
             <th>preco</th>
         </thed>
         <tbody>
-            <%for(var i=0;i<lista.length;i++) {%>
+            <%for(var i=0;i<list.length;i++) {%>
                 <tr>
                     <td>
                         <%=lista[i].id%>
