altera o nome do parametro lista para list

--- a/app/views/products/products-list/list.ejs
+++ b/app/views/products/products-list/list.ejs
@@ -12,16 +12,16 @@
             <%for(var i=0;i<list.length;i++) {%>
                 <tr>
                     <td>
-                        <%=lista[i].id%>
+                        <%=list[i].id%>
                     </td>
                     <td>
-                        <%=lista[i].titulo%>
+                        <%=list[i].titulo%>
                     </td>
                     <td>
-                        <%=lista[i].descricao%>
+                        <%=list[i].descricao%>
                     </td>
                     <td>
-                        <%=lista[i].preco%>
+                        <%=list[i].preco%>
                     </td>
                 </tr>
             <%}%>
