--- a/app/views/products/products-list/list.ejs
+++ b/app/views/products/products-list/list.ejs
@@ -1,6 +1,14 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="pt-BR">
+
+<head>
+    <title>Products</title>
+    <meta charset="UTF-8">
+</head>
 
 <body>
+    <a href="/products/new">Novo Produto</a>
     <table>
         <thed>
             <th>id</th>
@@ -15,13 +23,13 @@
                         <%=list[i].id%>
                     </td>
                     <td>
-                        <%=list[i].titulo%>
+                        <%=list[i].title%>
                     </td>
                     <td>
-                        <%=list[i].descricao%>
+                        <%=list[i].description%>
                     </td>
                     <td>
-                        <%=list[i].preco%>
+                        <%=list[i].price%>
                     </td>
                 </tr>
             <%}%>
