define a url /products com um post para salvar um novo produto

--- a/app/views/products/products-new/products-new.ejs
+++ b/app/views/products/products-new/products-new.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="/products/save" method="POST">
+    <form action="/products" method="POST">
 
         <div>
             <label for="titulo">Titulo
