fix thed para teheAD

--- a/app/views/products/products-list/products-list.ejs
+++ b/app/views/products/products-list/products-list.ejs
@@ -12,12 +12,12 @@
     <br/>
     <br/>
     <table>
-        <thed>
+        <thead>
             <th>id</th>
             <th>titulo</th>
             <th>descricao</th>
             <th>preco</th>
-        </thed>
+        </thead>
         <tbody>
             <%for(var i=0;i<list.length;i++) {%>
                 <tr>
