--- a/app/views/products/products-new/products-new.ejs
+++ b/app/views/products/products-new/products-new.ejs
@@ -8,21 +8,34 @@
 </head>
 
 <body>
+    <div class='erros'>
+        <% if(errors) { %>
+            <ul>
+                <% for(var i=0; i < errors.length; i++) {%>
+                    <li>
+                        <%= errors[i].param %> -
+                            <%= errors[i].msg %>
+                    </li>
+                    <%}%>
+            </ul>
+            <%}%>
+    </div>
+
     <form action="/products" method="POST">
 
         <div>
             <label for="titulo">Titulo
-                <input type="text" name="title" placeholder="coloque o titulo" />
+                <input type="text" name="title" placeholder="coloque o titulo" value="<%=product.title%>" />
             </label>
         </div>
         <div>
             <label>Preço
-                <input type="text" name="price" placeholder="150.25" />
+                <input type="text" name="price" placeholder="150.25" value="<%=product.price%>" />
             </label>
         </div>
         <div>
             <label>Descrição
-                <textarea cols="20" rows="10" name="description" placeholder="fale sobre o livro"></textarea>
+                <textarea cols="20" rows="10" name="description" placeholder="fale sobre o livro"><%=product.description%></textarea>
             </label>
         </div>
 
